# pybeautymaps

./: .gitignore  .travis.yml  README.md  coordinates.md  pyproject.toml  setup.cfg  setup.py
examples/: manhattan.py  paris.py
pybeautymaps/: __init__.py  beautymap.py  utils.py
tests/: test_beautymap.py  test_utils.py
